this is my second commit

--- a/src/classes/AccountStructure.cls
+++ b/src/classes/AccountStructure.cls
@@ -64,7 +64,7 @@ public with sharing class AccountStructure{
     * @return asm
     */
     public ObjectStructureMap[] formatObjectStructure( String currentId ){
-    
+    // this is first commit
         List<ObjectStructureMap> asm = new List<ObjectStructureMap>{};
         masm.clear();
 
